--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@ body {
 	font-family: courier, monospace;
 	color: #fff;
 	width:750px;
-	margin-left:15%;
-	margin-right:15%;
+	margin-left:auto;
+	margin-right:auto;
 	margin-top:90px;
 	font-size:14px;
 }
