--- a/index.css
+++ b/index.css
@@ -5,10 +5,11 @@ body {
 #console {
 	font-family: courier, monospace;
 	color: #fff;
-	width:75%;
-	margin-left:auto;
-	margin-right:auto;
+	width:750px;
+	margin-left:0 auto;
+	margin-right:0 auto;
 	margin-top:90px;
+	margin-bottom:150px;
 	font-size:14px;
 }
 
