--- a/index.css
+++ b/index.css
@@ -6,8 +6,8 @@ body {
 	font-family: courier, monospace;
 	color: #fff;
 	width:750px;
-	margin-left:0 auto;
-	margin-right:0 auto;
+	margin-left:auto;
+	margin-right:auto;
 	margin-top:90px;
 	margin-bottom:150px;
 	font-size:14px;
