--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 #console {
 	font-family: courier, monospace;
 	color: #fff;
-	width: 800px;
+	width: 75%;
 	margin-left:auto;
 	margin-right:auto;
 	margin-top:90px;
