--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 body {
-	background-color: #000
+	background-color: #000;
+	-webkit-text-size-adjust: none;
+	-ms-text-size-adjust: none;
+	-moz-text-size-adjust: none;
+
 }
 
 #console {
