--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 body {
 	background-color: #000;
-	-webkit-text-size-adjust: none;
-	-ms-text-size-adjust: none;
-	-moz-text-size-adjust: none;
+	-webkit-text-size-adjust: auto;
+	-ms-text-size-adjust: auto;
+	-moz-text-size-adjust: auto;
 
 }
 
